[JBWS-4112] added permissions and script arg adjustments